--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                 <h2>My Work Process</h2>
                 <div class="icon_z-index"></div>
                 <div class="main_icon">
-                    <i class="fas fa-search icon"></i>
-                    <i class="fas fa-battery-full icon"></i>
-                    <i class="fas fa-arrow-alt-circle-up icon"></i>
-                    <i class="fab fa-accessible-icon icon"></i>
+                    <div><i class="fas fa-search icon"></i></div>
+                    <div><i class="fas fa-battery-full icon"></i></div>
+                    <div><i class="fas fa-arrow-alt-circle-up icon"></i></div>
+                    <div><i class="fab fa-accessible-icon icon"></i></div>
                 </div>
             </div>
         </section>
